@@ -24,11 +24,15 @@ ___admin-degrees-page{}
 
 #fp-form-admin_degrees_list_filter_form .markup-element-mark_top,
 #fp-form-admin_degrees_list_filter_form #element-wrapper-filter_class,
+#fp-form-admin_degrees_list_filter_form #element-wrapper-filter_school,
 #fp-form-admin_degrees_list_filter_form #element-wrapper-submit_btn,
 #fp-form-admin_degrees_list_filter_form #element-wrapper-reset_btn,
 #fp-form-admin_degrees_list_filter_form #element-wrapper-filter_class div,
 #fp-form-admin_degrees_list_filter_form #element-wrapper-filter_class label,
 #fp-form-admin_degrees_list_filter_form #element-wrapper-filter_class select,
+#fp-form-admin_degrees_list_filter_form #element-wrapper-filter_school div,
+#fp-form-admin_degrees_list_filter_form #element-wrapper-filter_school label,
+#fp-form-admin_degrees_list_filter_form #element-wrapper-filter_school select,
 #ignore .ignoreme
  {
   display: inline-block;
@@ -41,6 +45,30 @@ ___admin-degrees-page{}
   margin-left: 30px;
 }
 
+
+___admin-groups-page{}
+#fp-form-admin_groups_list_filter_form .markup-element-mark_top,
+#fp-form-admin_groups_list_filter_form #element-wrapper-filter_school,
+#fp-form-admin_groups_list_filter_form #element-wrapper-filter_name,
+#fp-form-admin_groups_list_filter_form #element-wrapper-submit_btn,
+#fp-form-admin_groups_list_filter_form #element-wrapper-reset_btn,
+#fp-form-admin_groups_list_filter_form #element-wrapper-filter_school div,
+#fp-form-admin_groups_list_filter_form #element-wrapper-filter_school label,
+#fp-form-admin_groups_list_filter_form #element-wrapper-filter_school select,
+#fp-form-admin_groups_list_filter_form #element-wrapper-filter_name div,
+#fp-form-admin_groups_list_filter_form #element-wrapper-filter_name label,
+#fp-form-admin_groups_list_filter_form #element-wrapper-filter_name input,
+#ignore .ignoreme
+ {
+  display: inline-block;
+  margin-right: 10px;
+  margin-bottom: 0;  
+  width: auto;
+}
+
+#fp-form-admin_groups_list_filter_form #element-wrapper-reset_btn {
+  margin-left: 30px;
+}
 
 
 
