@@ -1,6 +1,12 @@
 FlightPath 6.x Changelog
 ========================
 
+2021-06-03
+  Added new schools filter option to degrees, and working on groups.  Filters on degrees list now actually
+  a form (and added new form to groups) so other modules can modify with hook_form_alter if desired.  Right now,
+  it's only really for the schools module.
+  
+
 2021-06-01
   Fixed bug in pager_query which was sometimes throwing numbers off.  Expanded functionality of the paget_query function.
   
@@ -8,6 +14,7 @@ FlightPath 6.x Changelog
   Therefore, the users table will be the only place that a user's school_id is stored.
   
   Changed wording on user module, which stated CWID had to be numeric.  It does not.
+
 
 2021-05-31
   Adding school_id to api and queries throughout FlightPath.
